fix style z-index

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1654,7 +1654,7 @@ p {
     width: 100%;
     background: hsla(0, 0%, 100%, .3);
     -webkit-backdrop-filter: blur(8px);
-    z-index: 4;
+    z-index: 1;
 }
 
 .wrapper-maker-message {
